--- a/translations/dataFixtures.sk.po
+++ b/translations/dataFixtures.sk.po
@@ -775,9 +775,6 @@ msgstr "Vyřízena"
 msgid "Donec at dolor mi. Nullam ornare, massa in cursus imperdiet, felis nisl auctor ante, vel aliquet tortor lacus sit amet ipsum. Proin ultrices euismod elementum. Integer sodales hendrerit tortor, vel semper turpis interdum eu. Phasellus quam tortor, feugiat vel condimentum vel, tristique et ipsum. Duis blandit lectus in odio cursus rutrum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam pulvinar massa at imperdiet venenatis. Maecenas convallis lobortis quam in fringilla. Mauris gravida turpis eget sapien imperdiet pulvinar. Nunc velit urna, fringilla nec est sit amet, accumsan varius nunc. Morbi sed tincidunt diam, sit amet laoreet nisl. Nulla tempus id lectus non lacinia.\\n\\nVestibulum interdum adipiscing iaculis. Nunc posuere pharetra velit. Nunc ac ante non massa scelerisque blandit sit amet vel velit. Integer in massa sed augue pulvinar malesuada. Pellentesque laoreet orci augue, in fermentum nisl feugiat ut. Nunc congue et nisi a interdum. Aenean mauris mi, interdum vel lacus et, placerat gravida augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sagittis ipsum et consequat euismod. Praesent a ipsum dapibus, aliquet justo a, consectetur magna. Phasellus imperdiet tempor laoreet. Sed a accumsan lacus, accumsan faucibus dolor. Praesent euismod justo quis ipsum aliquam suscipit. Sed quis blandit urna."
 msgstr ""
 
-msgid "Doporučujeme"
-msgstr ""
-
 msgid "Doprodej"
 msgstr ""
 
@@ -1846,6 +1843,9 @@ msgstr ""
 msgid "Toys"
 msgstr "Hračky a další"
 
+msgid "Tropic doporučuje"
+msgstr "Tropic odporúča"
+
 msgid "Tube type: Universal. Diameter: 32mm."
 msgstr "Typ hubice: Univerzální. Průměr: 32 mm."
 
@@ -2002,6 +2002,9 @@ msgstr ""
 msgid "Zahradní náčiní"
 msgstr ""
 
+msgid "Zaplaceno"
+msgstr "Zaplatené"
+
 msgid "Zásady ochrany osobních údajů"
 msgstr ""
 
@@ -2061,9 +2064,6 @@ msgstr "ks"
 
 msgid "white"
 msgstr "bílá"
-
-msgid "Zaplaceno"
-msgstr "Zaplatené"
 
 msgid "| Demo eshop"
 msgstr "| Demo obchod"
