--- a/translations/validators.sk.po
+++ b/translations/validators.sk.po
@@ -1,4 +1,8 @@
-
+msgid ""
+msgstr ""
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Language: sk\n"
 
 msgid "City name cannot be longer than {{ limit }} characters"
 msgstr "Názov mesta nesmie byť dlhší ako {{ limit }} znakov"
@@ -305,3 +309,4 @@ msgstr "Zadajte prosím výšku zľavy"
 
 msgid "Zip code cannot be longer than {{ limit }} characters"
 msgstr "PSČ nesmie byť dlhšie ako {{ limit }} znakov"
+
