[TF-1051] Renamed a section on homepage

--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -2822,7 +2822,7 @@ msgid "Tento e-mail je registrován. Můžete se <span>přihlásit</span>"
 msgstr ""
 
 msgid "Tento měsíc máme v akci"
-msgstr ""
+msgstr "Akční nabídka"
 
 msgid "Tento produkt nemá žádné příznaky"
 msgstr ""
