Legacy users are now asked to change their passwords when they attempt to log in for the first time.

--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -2401,6 +2401,9 @@ msgstr "Přidám poznámku k objednávce"
 msgid "Přihlaste se"
 msgstr "Přihlaste se"
 
+msgid "Přihlašujete se poprvé na novém e-shopu, prosím, nastavte si heslo pomocí funkce „Zapomenuté heslo“"
+msgstr "Přihlašujete se poprvé na novém e-shopu, prosím, nastavte si heslo pomocí funkce „<a href=\"%passwordResetUrl%\">Zapomenuté heslo</a>“."
+
 msgid "Přihlásit se"
 msgstr "Přihlásit se"
 
