[TF-836] Now generate button trigers feed cron module

--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -3913,3 +3913,6 @@ msgstr "< PŘEDCHOZÍ"
 msgid "NEXT >"
 msgstr "DALŠÍ >"
 
+msgid "Feed successfully generated."
+msgstr "Feed byl úspěšně vygenerován."
+
