--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -76,7 +76,7 @@ msgstr ""
 msgid "404-boot"
 msgstr ""
 
-msgid "483 10 44 44"
+msgid "483 104 444"
 msgstr ""
 
 msgid "6 důvodů, proč nakoupit u nás"
@@ -504,6 +504,9 @@ msgstr "Vytvořeno v"
 
 msgid "Creation date"
 msgstr "Datum vytvoření"
+
+msgid "Cron overview"
+msgstr "Přehled cronů"
 
 msgid "Current status"
 msgstr "Aktuální stav"
@@ -1441,6 +1444,9 @@ msgstr ""
 msgid "Můžete nahrát soubor v těchto formátech: PNG, JPG, GIF, BMP, TXT, RTF, PDF, DOC, DOCX, ODF, XLS, XLSX, PPT, PPTX, XML, HTM, HTML, CSV, ZIP"
 msgstr ""
 
+msgid "Na splátky ještě dnes již od"
+msgstr ""
+
 msgid "Nabízené produkty"
 msgstr ""
 
@@ -1499,6 +1505,9 @@ msgid "Nastavit"
 msgstr "Nastavit"
 
 msgid "Načerpejte inspiraci"
+msgstr ""
+
+msgid "Načíst dalších"
 msgstr ""
 
 msgid "Naše prodejna"
@@ -1588,6 +1597,12 @@ msgstr "Nová rubrika blogu"
 msgid "New delivery address"
 msgstr "Nová dodací adresa"
 
+msgid "New orders"
+msgstr "Nové objednávky"
+
+msgid "New registered customers"
+msgstr "Nově registrovaní zákazníci"
+
 msgid "New store"
 msgstr "Nová prodejna"
 
@@ -1638,9 +1653,6 @@ msgstr "Není z čeho vybírat"
 
 msgid "Nothing to choose from."
 msgstr "Není z čeho vybírat."
-
-msgid "Novinka"
-msgstr ""
 
 msgid "Novinky"
 msgstr ""
@@ -2149,6 +2161,9 @@ msgstr "Počet produktů, ke kterým je dárek přiřazen"
 msgid "Počet variant"
 msgstr "{1} %variantsCount% varianta|[2,4] %variantsCount% varianty|[5,Inf[ %variantsCount% variant"
 
+msgid "Počkejte 5 sekund"
+msgstr ""
+
 msgid "Pošta bez hranic"
 msgstr "Pošta bez hranic"
 
@@ -2209,14 +2224,8 @@ msgstr "Prodejna"
 msgid "Prodejna - výprodej"
 msgstr ""
 
-msgid "Prodejna v Liberci"
-msgstr ""
-
 msgid "Prodejny"
 msgstr "Prodejny"
-
-msgid "Prodloužená záruka"
-msgstr ""
 
 msgid "Product <strong>{{ name }}</strong> ({{ quantity|formatNumber }} {{ unitName }}) added to the cart"
 msgstr "Do košíku bylo vloženo zboží <strong>{{ name }}</strong> ({{ quantity|formatNumber }} {{ unitName }})"
@@ -2437,6 +2446,9 @@ msgstr "Příznak pro dopravu zdarma"
 msgid "Příznaky"
 msgstr ""
 
+msgid "Quick product search"
+msgstr "Rychlé vyhledávání produktů"
+
 msgid "Quick search"
 msgstr "Rychlé hledání"
 
@@ -2496,6 +2508,9 @@ msgstr "SMS alert 2 dny do vyzvednutí"
 
 msgid "SMS alert 5 dní do vyzvednutí"
 msgstr "SMS alert 5 dní do vyzvednutí"
+
+msgid "Sales overview (last 7 days)"
+msgstr "Přehled prodejů (posledních 7 dní)"
 
 msgid "Samostatný produkt (ne hlavní a ne vedlejší varianta)"
 msgstr "Samostatný produkt (ne hlavní a ne vedlejší varianta)"
@@ -2634,6 +2649,9 @@ msgstr ""
 
 msgid "Skrýt položky"
 msgstr "Skrýt položky"
+
+msgid "Skrýt varianty"
+msgstr ""
 
 msgid "Skrývání zboží"
 msgstr "Skrývání zboží"
@@ -2955,6 +2973,9 @@ msgstr ""
 
 msgid "Typ platby"
 msgstr "Typ platby"
+
+msgid "Typ pro Zboží.cz"
+msgstr ""
 
 msgid "Typ produktu"
 msgstr "Typ produktu"
@@ -3331,9 +3352,6 @@ msgstr "Výpočet termínu dodání"
 msgid "Výprodej"
 msgstr ""
 
-msgid "Výprodejový"
-msgstr ""
-
 msgid "Výprodejový sklad"
 msgstr ""
 
@@ -3601,9 +3619,6 @@ msgstr ""
 msgid "a registrace"
 msgstr ""
 
-msgid "a telefon"
-msgstr ""
-
 msgid "a údaje vám předvyplníme."
 msgstr "a údaje vám předvyplníme."
 
@@ -3652,6 +3667,9 @@ msgstr "možnost získat"
 msgid "máte"
 msgstr "máte"
 
+msgid "měsíčně"
+msgstr ""
+
 msgid "na celý sortiment"
 msgstr "na celý sortiment"
 
@@ -3667,11 +3685,17 @@ msgstr "např. Praha"
 msgid "naše služby"
 msgstr "naše služby"
 
+msgid "nebo nás kontaktuje na e-mailu"
+msgstr "nebo nás kontaktujte na e-mailu"
+
 msgid "nebo pište na"
 msgstr ""
 
 msgid "nepovinné"
 msgstr ""
+
+msgid "new customers"
+msgstr "noví zákazníci"
 
 msgid "neznámá"
 msgstr "neznámá"
@@ -3690,6 +3714,9 @@ msgstr "obchodními podmínkami"
 
 msgid "on stock"
 msgstr "na skladě"
+
+msgid "orders sold"
+msgstr "vytvořených objednávek"
 
 msgid "osobních údajů"
 msgstr "osobních údajů"
@@ -3714,6 +3741,9 @@ msgstr "zboží"
 
 msgid "promo products"
 msgstr "Promo produkty"
+
+msgid "případně na infolinku"
+msgstr ""
 
 msgid "records"
 msgstr "záznamů"
@@ -3742,6 +3772,9 @@ msgstr "strana %page% z %pageCount%"
 msgid "tel.: +420 595 177 177"
 msgstr "tel.: +420 595 177 177"
 
+msgid "turnover in"
+msgstr "obrat v"
+
 msgid "u&nbsp;tebe"
 msgstr "u&nbsp;vás"
 
@@ -3753,6 +3786,9 @@ msgstr "v hodnotě"
 
 msgid "v měně dle zvolené domény"
 msgstr "v měně dle zvolené domény"
+
+msgid "variant"
+msgstr "variant"
 
 msgid "všechny zákazníky"
 msgstr "všechny zákazníky"
