--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -85,6 +85,9 @@ msgstr ""
 msgid "702 00 Ostrava"
 msgstr "702 00 Ostrava"
 
+msgid "< PREVIOUS"
+msgstr "< PŘEDCHOZÍ"
+
 msgid "<a href=\"{{ url }}\">Dárek k objednávce</a> byl úspěšně upraven"
 msgstr ""
 
@@ -387,9 +390,6 @@ msgstr ""
 
 msgid "Chci zadat doručovací adresu"
 msgstr "Chci zadat doručovací adresu"
-
-msgid "Chci zadat fakturační údaje"
-msgstr ""
 
 msgid "Chci zadat jiné fakturační údaje"
 msgstr "Chci zadat jiné fakturační údaje"
@@ -784,6 +784,9 @@ msgstr ""
 msgid "Dárkový poukaz - aktivován"
 msgstr ""
 
+msgid "Dárkový<br> poukaz<br> v hodnotě"
+msgstr ""
+
 msgid "Dárky"
 msgstr "Dárky"
 
@@ -916,6 +919,9 @@ msgstr "Fakturační adresa"
 msgid "Fakturační údaje"
 msgstr ""
 
+msgid "Feed successfully generated."
+msgstr "Feed byl úspěšně vygenerován."
+
 msgid "Files"
 msgstr "Soubory"
 
@@ -933,6 +939,9 @@ msgstr "Jméno"
 
 msgid "Fish"
 msgstr "Ryba"
+
+msgid "Fishes"
+msgstr ""
 
 msgid "Flags"
 msgstr "Příznaky"
@@ -954,6 +963,9 @@ msgstr "GEIS"
 
 msgid "GLS"
 msgstr "GLS"
+
+msgid "Generate"
+msgstr ""
 
 msgid "Generovat tento produkt do Mergado XML feedu"
 msgstr ""
@@ -1276,6 +1288,9 @@ msgstr ""
 msgid "Kód produktu"
 msgstr "Kód produktu"
 
+msgid "Kód vložte v pokladně při dokočení objednávky."
+msgstr ""
+
 msgid "Last name"
 msgstr "Příjmení"
 
@@ -1302,6 +1317,9 @@ msgstr "Odhlásit se"
 
 msgid "Login"
 msgstr "Přihlášení"
+
+msgid "Logo"
+msgstr ""
 
 msgid "Magazín"
 msgstr "Magazín"
@@ -1444,6 +1462,9 @@ msgstr ""
 msgid "Můžete nahrát soubor v těchto formátech: PNG, JPG, GIF, BMP, TXT, RTF, PDF, DOC, DOCX, ODF, XLS, XLSX, PPT, PPTX, XML, HTM, HTML, CSV, ZIP"
 msgstr ""
 
+msgid "NEXT >"
+msgstr "DALŠÍ >"
+
 msgid "Na splátky ještě dnes již od"
 msgstr ""
 
@@ -1505,9 +1526,6 @@ msgid "Nastavit"
 msgstr "Nastavit"
 
 msgid "Načerpejte inspiraci"
-msgstr ""
-
-msgid "Načíst dalších"
 msgstr ""
 
 msgid "Naše prodejna"
@@ -2017,11 +2035,17 @@ msgstr "Platba"
 msgid "Platnost"
 msgstr "Platnost"
 
+msgid "Platnost poukazu je 12 měsíců od zakoupení."
+msgstr ""
+
 msgid "Platnost slevového kupónu \"%code%\" vypršela. Prosím, zkontrolujte ho."
 msgstr "Platnost slevového kupónu \"%code%\" vypršela. Prosím, zkontrolujte ho."
 
 msgid "Platný do"
 msgstr "Platný do"
+
+msgid "Platný do:"
+msgstr ""
 
 msgid "Platný od"
 msgstr "Platný od"
@@ -2289,6 +2313,9 @@ msgstr "Produkty"
 
 msgid "Produkty k článku blogu"
 msgstr "Produkty k článku blogu"
+
+msgid "Produkty takto vyřazené z prodeje se nikde na e-shopu nezobrazují (a to ani v případě, že mají zobrazování výše nastaveno pomocí \"Zobrazit na\")."
+msgstr ""
 
 msgid "Promo code"
 msgstr "Slevový kupón"
@@ -2823,6 +2850,9 @@ msgstr ""
 
 msgid "TOPTRANS"
 msgstr "TOPTRANS"
+
+msgid "TROPIC LIBEREC s.r.o., U Sadu 655, Liberec 25, IČO: 25415981"
+msgstr ""
 
 msgid "Tak tady nic nechytíš :-)"
 msgstr "Tady nic nechytíš :)"
@@ -3385,6 +3415,9 @@ msgstr "Všechny produkty"
 msgid "Vždy vyčkejte, až vás budeme informovat, že zboží je připravené k odběru."
 msgstr ""
 
+msgid "XML Feeds"
+msgstr ""
+
 msgid "Yes"
 msgstr "Ano"
 
@@ -3649,6 +3682,9 @@ msgstr "historii svých objednávek,"
 msgid "hlášek"
 msgstr ""
 
+msgid "http://www.tropicfishing.cz/"
+msgstr ""
+
 msgid "in upper menu"
 msgstr "v horním menu"
 
@@ -3832,6 +3868,9 @@ msgstr ""
 msgid "{1} %stocksWithoutZeroQuantityOnStoreCount% prodejně| [2,Inf] %stocksWithoutZeroQuantityOnStoreCount% prodejnách"
 msgstr "{1} %stocksWithoutZeroQuantityOnStoreCount% prodejně| [2,Inf] %stocksWithoutZeroQuantityOnStoreCount% prodejnách"
 
+msgid "{1} NAČÍST DALŠÍ %count% VARIANTU |[2,4] NAČÍST DALŠÍ %count% VARIANTY |[5,Inf] NAČÍST DALŠÍCH %count% VARIANT"
+msgstr ""
+
 msgid "{1}Load next %loadNextCount% item|[2,Inf]Load next %loadNextCount% items"
 msgstr "{1}Načíst další položku|[2,4]Načíst další %loadNextCount% položky|[5,Inf]Načíst dalších %loadNextCount% položek"
 
@@ -3942,13 +3981,4 @@ msgstr ""
 
 msgid "Žádné slevy na celý nákup nenalezeny."
 msgstr ""
-
-msgid "< PREVIOUS"
-msgstr "< PŘEDCHOZÍ"
-
-msgid "NEXT >"
-msgstr "DALŠÍ >"
-
-msgid "Feed successfully generated."
-msgstr "Feed byl úspěšně vygenerován."
 
