[TF-1197] after add to cart window: fix formatting of error messages
- the "raw" filter must be applied to the whole error message in the template
- AddProductFormType: added a more specific constraint message for quantity minimum amout
- CartController: use addErrorFlash instead of addErrorFlashTwig to render the message properly (including "&nbsp;")

--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -3040,8 +3040,8 @@ msgstr "Uložit"
 msgid "Unable to add product to cart"
 msgstr "Zboží se nám nepodařilo vložit do košíku."
 
-msgid "Unable to add product to cart:<br/><ul><li>{{ errors|raw }}</li></ul>"
-msgstr "Zboží se nám nepodařilo vložit do košíku:<br/><ul><li>{{ errors|raw }}</li></ul>"
+msgid "Unable to add product to cart:<br/><ul><li>%errors%</li></ul>"
+msgstr "Zboží se nám nepodařilo vložit do košíku:<br/><ul><li>%errors%</li></ul>"
 
 msgid "Unable to remove item from cart. The item is probably already removed."
 msgstr "Nepodařilo se nám odstranit položku z košíku. Nejspíš už v něm není."
